src/styles/_general.scss
.container {
    padding: 0rem 1rem;

    @media (min-width: 1200px) {
        padding: 0rem 4rem;
    }
}

.slim-container {
    max-width: 120rem;
    margin: 0 auto;
}

.image {
    opacity: 0;
    transition: opacity 0.3s;
}
.image-loaded {
    opacity: 1;
}

.section-header {
    height: 6.5rem;
    margin-top: 2rem;
    border-bottom: 0.1rem solid rgba(255, 255, 255, 0.35);
    display: flex;
    align-items: baseline;
    justify-content: space-between;
    flex-wrap: wrap;

    .header-title {
        font-size: 3rem;
        font-weight: 300;

        img,
        span {
            vertical-align: middle;
        }

        img {
            width: 4.5rem;
            height: 4.5rem;
            margin-right: 1rem;
        }
    }

    @media (max-width: 767px) {
        height: auto;

        .header-title {
            width: 100%;
            padding-bottom: 1rem;
        }

        .header-item {
            padding-bottom: 2rem;
            width: 100%;
        }
    }
}

.sub-menu {
    height: 4rem;
    display: flex;
    align-items: center;
    font-size: 1.8rem;
    user-select: none;
    justify-content: space-between;
    font-size: 1.5rem;
    flex-wrap: wrap;

    .sub-menu-left,
    .sub-menu-right {
        display: flex;
        align-items: baseline;
    }

    img,
    span {
        vertical-align: middle;
    }

    .sub-menu-item {
        img {
            margin-right: 0.5rem;
        }

        &.share {
            a {
                color: aqua;

                &:hover {
                    color: lightcyan;
                }
            }
        }
    }

    .sub-menu-left .sub-menu-item {
        margin-right: 2rem;
    }

    .sub-menu-right .sub-menu-item {
        margin-left: 2rem;
    }

    @media (max-width: 767px) {
        display: block;
        height: auto;
        .sub-menu-left,
        .sub-menu-right {
            display: block;
            width: 100%;
        }
        .sub-menu-item {
            margin: 1rem 0 !important;
        }
    }
}

.side-bar {
    overflow: hidden;
}

.new {
    display: inline-block;
    color: white;
    width: 1.2rem;
    height: 1.2rem;
    line-height: 1.3rem;
    font-size: 1rem;
    text-align: center;
    background: dodgerblue;
}

.listing {
    margin: 2rem 0;

    .no-data {
        text-align: center;
        color: #777;
    }

    .list-item {
        border-bottom: 0.1rem solid rgba(255, 255, 255, 0.2);
        display: flex;
        padding: 2rem 0.5rem;
        transition: all 0.5s;
        overflow: hidden;

        &.selected,
        &:hover {
            background: rgba(0, 0, 0, 0.4);
            padding-left: 2rem;

            .list-item-title {
                color: white;
            }
        }

        .list-item-title {
            transition: all 0.5s;
            font-size: 2.2rem;
            line-height: 2.5rem;
            color: #aaa;
            font-weight: 300;
            display: flex;
            align-items: baseline;
            white-space: nowrap;
            overflow: hidden;

            .new {
                margin-left: 1rem;
            }
        }

        .list-item-timestamp {
            color: #777;
            font-size: 1.4rem;
        }
    }
}

.grade_0 {
    color: #999 !important;
}
.grade_3 {
    color: #008746 !important;
}
.grade_4 {
    color: #297bb0 !important;
}
.grade_5 {
    color: #a847bd !important;
}
.grade_7 {
    color: #ed6900 !important;
}

